EOD: Almost working Hub with SingalR
Twitch redeems
- Brought to you by Rub1_NN
- Brought to you by Rub1_NN with "I like pizza"
- Brought to you by Rub1_NN
- Brought to you by Rub1_NN with "rubin x3"
- Brought to you by Rub1_NN with "rubin x4"
- Brought to you by Rub1_NN with "rubin x5"
